# fractal-mcp-bridge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.agents/: AGENTS.md  mcp_config.json
.agents/skills/api_client/: SKILL.md
.agents/skills/bug_hunt/: SKILL.md
.agents/skills/file_management/: SKILL.md
.agents/skills/git_operations/: SKILL.md
.agents/skills/process_control/: SKILL.md
lib/: renderer.py
lib/fractal_core/: config.py  julia.py  mandelbrot.py
lib/utils/: image.py  palette.py
scripts/: run-tests.sh
src/: fractal_app.py  interactive_server.py
src/api/: explorer.py
src/bridge/: server.py
src/fractal_mcp/: app.py  explorer_app.py  renderer.py
src/fractal_mcp/api/: explorer.py
src/fractal_mcp/app/: main.py
src/fractal_mcp/app/api/: __init__.py  routes.py
src/fractal_mcp/app/static/: index.html  script.js  styles.css
src/fractal_mcp/bridge/: __init__.py  server.py
src/fractal_mcp/core/: julia.py  mandelbrot.py
src/fractal_mcp/math/: __init__.py  cosine.py  exponents.py  grid.py  julia.py  mandelbrot.py  newton.py  sine.py
src/fractal_mcp/static/: index.html  script.js
static/: index.html  script.js  styles.css
tests/: __init__.py  test_app.py  test_explorer_app.py  test_julia.py  test_mandelbrot.py  test_renderer.py
tests/api/: test_explorer.py
tests/app/: test_app.py  test_main.py
tests/app/api/: test_explorer.py  test_routes.py
tests/bridge/: test_server.py
tests/core/: test_julia.py  test_mandelbrot.py
tests/lib/: test_mandelbrot.py  test_renderer.py
tests/lib/fractal_core/: test_julia.py  test_mandelbrot.py
tests/lib/utils/: test_image.py  test_palette.py
tests/math/: test_cosine.py  test_exponents.py  test_grid.py  test_julia.py  test_mandelbrot.py  test_newton.py  test_sine.py
tests/src/: test_fractal_app.py  test_interactive_server.py
tests/src/api/: test_explorer.py
tests/src/bridge/: test_server.py
tests/utils/: test_image.py
