[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fractal-mcp-bridge"
version = "0.1.0"
dependencies = [
    "fastmcp",
    "numpy",
    "numba",
    "google-cloud-bigquery"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]