[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fractal-mcp-bridge"
version = "0.1.0"
dependencies = [
    "fastmcp",
    "fastapi",
    "uvicorn",
    "numpy",
    "numba",
    "Pillow",
    "bokeh"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
# Error, Pyflakes, Isort, Bugbear, Upgrade
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
files = ["src", "tests"]