[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fractal-mcp-bridge"
version = "0.1.0"
dependencies = [
    "fastmcp",
    "fastapi",
    "uvicorn",
    "numpy",
    "numba",
    "Pillow",
    "bokeh"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fractal_mcp.app" = ["static/*"]

[project.scripts]
fractal-mcp = "fractal_mcp.bridge.server:main"
fractal-web-explorer = "fractal_mcp.app.main:main"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
# Error, Pyflakes, Isort, Bugbear, Upgrade, Private Access (Self), Import Outside Top Level
select = ["E", "F", "I", "B", "UP", "SLF", "PLC0415"]
ignore = ["B008"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
files = ["src", "tests"]